syntax = "proto3";

package chatbot;

option java_multiple_files=true;
option java_package="com.proto.chatbot";

message ChatbotRequest {
    string question = 1;
    string user = 2;
    string channel = 3;
}

message ChatbotResponse {
    string answer = 1;
}

service ChatbotService {
    // throws StatusRuntimeException
    rpc chat(ChatbotRequest) returns (ChatbotResponse) {}
}
